@@ -1,0 +1,39 @@
+/*
+ * Copyright 2006-2008 the original author or authors.
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.osgi.iandt.extenderlistener;
+
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+import org.springframework.osgi.context.event.OsgiBundleApplicationContextEvent;
+import org.springframework.osgi.context.event.OsgiBundleApplicationContextListener;
+
+/**
+ * Simple logger.
+ * 
+ * @author Costin Leau
+ * 
+ */
+public class LoggerListener implements OsgiBundleApplicationContextListener {
+
+	/** logger */
+	private static final Log log = LogFactory.getLog(LoggerListener.class);
+
+
+	public void onOsgiApplicationEvent(OsgiBundleApplicationContextEvent event) {
+		log.info("Received event " + event);
+	}
+}
